# C_SmartPointer

./: .gitignore  CMakeLists.txt  readme.md
demo/: main.c
include/: SmartPointer.h
src/: SmartPointer.c
